# arbitrage-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: backtest.py  run_e2e_tests.sh  setup.sh
src/: __init__.py  main.py  main_fullscan.py  main_realdata.py  main_sim.py
src/arbitrage/: __init__.py  calculator.py  detector.py  funding.py
src/config/: constants.py  logging_config.py  settings.py
src/database/: __init__.py  crud.py  db_manager.py  models.py
src/exchanges/: __init__.py  base.py
src/exchanges/crypto/: __init__.py  binance.py
src/execution/: __init__.py  order_validator.py  paper_trader.py  slippage.py
src/models/: __init__.py  market.py  opportunity.py  portfolio.py  trade.py
src/risk/: __init__.py  manager.py
src/simulation/: __init__.py  simulator.py
src/ui/: __init__.py  dashboard.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_dashboard.py
tests/integration/: test_paper_trading.py
tests/unit/: test_arbitrage.py  test_execution.py  test_models.py
